bk_ida/gccida/g1/expand_complex_abs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2912:26: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_complex_abs( machine_mode mode, rtx op0, rtx target, int unsignedp) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2914:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v5; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2924:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2925:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2928:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2940:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2947:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+24h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2948:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+28h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2949:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+2Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2953:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2956:65: error: called object type 'const enum mode_class [59]' is not a function or function pointer
submode = mode_for_size( 8 * mode_unit_size[mode], ( mode_class)( ( v5 != MODE_COMPLEX_INT) + 1), 0); 
                                                   ~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2972:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v8].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2992:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v13 = insn_data_0[v8].genfun( v10, xop0_0); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/optabs.c:2992:29: error: called object type '<dependent type>' is not a function or function pointer
v13 = insn_data_0[v8].genfun( v10, xop0_0); 
                            ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_complex_abs/src/obj/optabs.o] Error 1
